<title>Classic & Sport Autos - Entretien et Réparation de Voitures de Collection</title>
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@60 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -12,7 +12,7 @@
 					J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.">
 <meta name="keywords" content="entretien autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne, r&eacute;paration, pr&eacute;paration, anglaises, italiennes">
 
-<title>Classic & Sport Autos - Entretien et Réparation de Voitures Anciennes</title>
+<title>Classic & Sport Autos - Entretien et Réparation de Voitures de Collection</title>
 <link rel="shortcut icon" href="images/csa.ico">
 <link rel="stylesheet" type="text/css" media="screen" href="css/init.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/layout.css">
