--- a/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
@@ -2,9 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="fr">
-<meta name="robots" content="index, follow">
+<?php include 'includes/metas.inc.php'; ?>
 
 <meta name="description" content="Nos prestations. Classic et Sport Autos, histoire d'une passion.">
 <meta name="keywords" content="prestations, histoire, huguet">
@@ -17,21 +15,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/ju2com.css">
 <link rel="stylesheet" type="text/css" media="print" href="css/csa.css">
 
-<script type="text/javascript">
-//Google Analytics
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-20953337-3']);
-  _gaq.push(['_setDomainName', 'none']);
-  _gaq.push(['_setAllowLinker', true]);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+<?php include 'includes/googleAnalytics.inc.php'; ?>
+    
 </head>
 
 <body>
@@ -39,15 +24,8 @@
 	<div class="container">
 		<div class="wrapper">
 			<div class="head">
-				<div class="logo"></div>
-				<ul class="menu">
-					<li><a href="index.html">Accueil</a></li>
-					<li><a href="atelier.html">Atelier</a></li>
-					<li><a class="current" href="engagements.html">Nos engagements</a></li>
-					<li><a href="achatsventes.html">Achats/Ventes</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-				<div class="clearit"></div>
+                                <?php $highlight = 'engagements'; ?>
+                                <?php include 'includes/top.inc.php'; ?>                            
 				<div class="espacepromo2"></div>
 			</div>
 			<h1>Histoire d'une passion</h1>
@@ -92,53 +70,7 @@
 			</div>
 			<div class="clearit"></div>
 		</div>
-		<div class="car"></div>
-		<div class="pieddepage">
-			<div class="col260">
-				<h2>Le site</h2>
-				<ul>
-					<li><a href="index.html">Accueil</a></li>
-					<li><a href="atelier.html">Atelier</a></li>
-					<li><a href="engagements.html">Nos engagements</a></li>
-					<li><a href="achatsventes.html">Achats/Ventes</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="col260">
-				<h2>Evènements</h2>
-				<p>
-                                <li><b style="color: red">Joyeuses Fêtes et Meilleurs voeux pour 2012 !</b> - Rendez-vous au garage <b>Samedi 7 Janvier à partir de 10h30</b></li>
-                                <li>Retrouvez C&SA sur <a href="http://www.auto-pedia.fr/"><b>auto-pedia.fr</b></a></li>
-				</p>
-			</div>
-			<div class="col260_3">
-				<h2>Horaires d'ouverture</h2>
-				<ul>
-					<li>Du Lundi au Vendredi</li>
-					<li>de 9h00 &agrave; 12h00</li>
-					<li>et de 14h00 &agrave; 18h30</li>
-				</ul>
-				<br/>
-				<h2>Adresse</h2>
-				<ul>
-					<li>Classic et Sport Autos</li>
-					<li>20 RUE DU BEAL</li>
-					<li>38400 Saint-martin-d'h&egrave;res</li>
-					<li><b>T&eacute;l</b> : +33 (0)4.57.93.38.57</li>
-				</ul>
-			</div>
-			<div class="clearit"></div>
-			<div class ="mentions">
-				<b>Classic & Sport Autos</b> - 20 Rue du B&eacute;al - 38400 Saint-martin-d'h&egrave;res
-				<br/>
-				T&eacute;l&eacute;phone +33 (0)4.57.93.38.57 - T&eacute;l&eacute;copie +33 (0)4.57.93.38.57 - <a href="mailto:contact@classicetsportautos.fr">contact@classicetsportautos.fr</a>
-				<br/>
-				Copyright ©2011 Classic & Sport Autos, Tous droits réservés.
-				<br/>
-				Num&eacute;ro siren : 527 671 515
-			</div>
-			<script type="text/javascript" src="http://www.ju2com.fr/js/signatureFdNr.js"></script>
-		</div>
+                <?php include 'includes/bottom.inc.php'; ?>
 	</div><!--fin container-->
 	</div><!--fin background-->
 </body>
