Nouvelles images pour bandeau page accueil
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@70 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -32,8 +32,9 @@
                             <div class="espacepromo">
 
 				<ul class="slideshow">
-				    <li class="show"><a href="#"><img src="img/bandeauGarage.jpg" width="858" height="250" title="Atelier" alt=""/></a></li>
-				    <li><a href="#"><img src="img/bandeauTypeE.jpg" width="858" height="250" title="Jaguar Type E" alt=""/></a></li>
+                                    <li class="show"><a href="#"><img src="img/panoramaNewYear2012_2.jpg" width="858" height="250" title="Bonne année 2012" alt=""/></a></li>
+                                    <li><a href="#"><img src="img/PanoramaCSAanniv_1.jpg" width="858" height="250" title="1er anniversaire de Classic & Sport Autos" alt=""/></a></li>
+                                    <li><a href="#"><img src="img/bandeauGarage.jpg" width="858" height="250" title="Atelier" alt=""/></a></li>
                                     <li><a href="#"><img src="img/bandeauDevantGarage.jpg" width="858" height="250" title="" alt=""/></a></li>
 				</ul>
 
