refactoring du widget atelier mis Uriage Cabriolet 2012 et Winter Cab 2012 dans Evènements
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@72 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -58,38 +58,7 @@
 				<a class="plus" href="engagements.html">Lire la suite >></a>                            
                         </div>
 
-			<div class="col260">
-				<h1>L'atelier</h1>
-				<a rel="example_group" href="img/atelier/triumphTR4_b.jpg" title="Triumph TR4">
-				<img class="pict" src="img/atelier/triumphTR4_s.jpg" alt="" /></a>
-				<a rel="example_group" href="img/atelier/fiat500_b.jpg" title="Fiat 500">
-				<img class="pict" src="img/atelier/fiat500_s.jpg" alt="" /></a>
-				<a rel="example_group" href="img/atelier/Jaguar_b.jpg" title="Jaguar">
-				<img class="pict2" src="img/atelier/Jaguar_s.jpg" alt="" /></a>
-
-				<a rel="example_group" href="img/atelier/JaguarTypeE4-2_b.jpg" title="Jaguar Type E 4.2l">
-				<img class="pict" src="img/atelier/JaguarTypeE4-2_s.jpg" alt="" /></a>
-				<a rel="example_group" href="img/atelier/triumphTR6_b.jpg" title="Triumph TR6">
-				<img class="pict" src="img/atelier/triumphTR6_s.jpg" alt="" /></a>
-				<a rel="example_group" href="img/atelier/AustinHealey_Sprite_b.jpg" title="Austin Healey Sprite">
-				<img class="pict2" src="img/atelier/AustinHealey_Sprite_s.jpg" alt="" /></a>
-
-				<p>
-					D&eacute;couvrez l'atelier en image. <a class="plus" href="atelier.html">Lire la suite >></a>
-				</p>
-
-				<br/><br/>
-				<h1>Ils sont venus chez nous</h1>
-				<a rel="example_group2" href="img/visites/amilcar_b.jpg" title="Amilcar 1928">
-				<img class="pict" src="img/visites/amilcar_s.jpg" alt="" /></a>
-				<a rel="example_group2" href="img/visites/Triumph_TR3_b.jpg" title="Triumph TR3">
-				<img class="pict" src="img/visites/Triumph_TR3_s.jpg" alt="" /></a>
-				<a rel="example_group2" href="img/visites/xk140_b.jpg" title="Jaguar XK140">
-				<img class="pict2" src="img/visites/xk140_s.jpg" alt="" /></a>
-
-			</div>
-
-
+                        <?php include 'includes/atelierWidget.inc.php'; ?>
                                 
 			<div class="col260_3">
                             <div id="fb-root"></div>
