changement photos widget atelier
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@74 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -34,7 +34,6 @@
 				<ul class="slideshow">
                                     <li class="show"><a href="#"><img src="img/panoramaNewYear2012_2.jpg" width="858" height="250" title="Bonne année 2012" alt=""/></a></li>
                                     <li><a href="#"><img src="img/PanoramaCSAanniv_1.jpg" width="858" height="250" title="1er anniversaire de Classic & Sport Autos" alt=""/></a></li>
-                                    <li><a href="#"><img src="img/bandeauGarage.jpg" width="858" height="250" title="Atelier" alt=""/></a></li>
                                     <li><a href="#"><img src="img/bandeauDevantGarage.jpg" width="858" height="250" title="" alt=""/></a></li>
 				</ul>
 
@@ -43,8 +42,6 @@
 
 			<div class="col260">
 				<h1>Nos prestations</h1>
-				<a id="example3" href="img/visites/typeE_b.jpg" >
-				<img src="img/visites/typeE_b.jpg" alt="" /></a>
 				<p>
 					Nos activités principales &agrave; Classic & Sport Autos sont
 					l'entretien, la réparation, la mise au point et l'amélioration de
@@ -56,14 +53,14 @@
 					véhicules de collection, en particulier italiens, <i>Alfa Roméo, Ferrari, Fiat, Lancia...</i>
 				</p>
 				<a class="plus" href="engagements.html">Lire la suite >></a>                            
-                        </div>
-
+    <br/><br/>
                         <?php include 'includes/atelierWidget.inc.php'; ?>
+                        </div>
                                 
-			<div class="col260_3">
+			<div>
                             <div id="fb-root"></div>
                             <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-                            <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507" width="260" show_faces="false" stream="true" header="false"></fb:like-box>
+                            <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507" width="560" show_faces="false" stream="true" header="false"></fb:like-box>
 			</div>
 
 			<div class="clearit"></div>
