Set image resizer on the fly
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@79 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -46,9 +46,9 @@
 				<div class="col560">
 					<h1>Vente</h1>
                                         <hr/>                                        
-                                                <div class="vente-titre">                                        
+                                                <div class="vente-titre">
 							<a rel="xk120" href="img/ventes/xk120/xk120_roadster.jpg" title="Jaguar XK 120 Roadster">
-							<img class="pict" src="img/ventes/xk120/xk120_roadster_s.jpg" alt="" /></a>
+                                                        <img class="pict" src="/utils/image.php/xk120_roadster.jpg?height=78&width=78&cropratio=1:1&image=/img/ventes/xk120/xk120_roadster.jpg"/></a>
                                                         <h2>Jaguar XK 120 Roadster</h2>                                                        
                                                         <p>Prix: <strong>79 900&euro;</strong></p>
                                                         <p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
@@ -58,12 +58,12 @@
 							<p>Kilom&eacute;trage: <strong>28 578 KM</strong></p>
 						</div>
 						<div class="vente-col2">
-							<a rel="xk120" href="img/ventes/xk120/jaguarXK120_3.jpg" title="Jaguar XK 120 Roadster">
-							<img class="icone" src="img/ventes/xk120/jaguarXK120_3.jpg" alt="" /></a>
-                                                        <a rel="xk120" href="img/ventes/xk120/jaguarXK120_2.jpg" title="Jaguar XK 120 Roadster">
-							<img class="icone" src="img/ventes/xk120/jaguarXK120_2.jpg" alt="" /></a>
+							<a rel="xk120" href="img/ventes/xk120/jaguarXK120_3.JPG" title="Jaguar XK 120 Roadster">
+                                                        <img class="icone" src="/utils/image.php/jaguarXK120_3.JPG?height=20&width=20&cropratio=1:1&image=/img/ventes/xk120/jaguarXK120_3.JPG"/></a>
+                                                        <a rel="xk120" href="img/ventes/xk120/jaguarXK120_2.JPG" title="Jaguar XK 120 Roadster">
+                                                        <img class="icone" src="/utils/image.php/jaguarXK120_2.jpg?height=20&width=20&cropratio=1:1&image=/img/ventes/xk120/jaguarXK120_2.JPG"/></a>
                                                         <a rel="xk120" href="img/ventes/xk120/xk120_roadster_int.jpg" title="Jaguar XK 120 Roadster">
-							<img class="icone" src="img/ventes/xk120/xk120_roadster_int.jpg" alt="" /></a>
+                                                        <img class="icone" src="/utils/image.php/xk120_roadster_int.jpg?height=20&width=20&cropratio=1:1&image=/img/ventes/xk120/xk120_roadster_int.jpg"/></a>
 						<p>
                                                 Belle Jaguar XK 120 roadster de 1953, conduite à droite d'origine, de couleur rouge avec de jolis sièges 
                                                 bi-ton.
